--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,9 @@
   <h2>
    <%= (t :ideas_by_user) +" "+ @user.name %>
   </h2>
+  <% if not session[:user_id].nil? and current_user.admin%>
+    <%= link_to 'Edit user', edit_user_path(@user) %>
+  <% end %>
 </div>
 
 <%= render 'layouts/list_ideas'%>
