--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing User</h1>
+<div class="container">
+  <h1>Editing User <%= @user.name %></h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to (t :show), @user %> |
-<%= link_to (t :back), users_path %>
+  <%= link_to (t :show), @user %> |
+  <%= link_to (t :back), users_path %>
+</div>
