--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -44,13 +44,13 @@
   <!-- End tags -->
   <!-- Show sort -->
   <%= sort_link @q, :topic_case_insensitive do %>
-    Topic
+    <% (t :topic) %>
   <% end %>
   <%= sort_link @q, :created_at do %>
-    Time
+    <% (t :date) %>
   <% end %>
   <%= sort_link @q, :likes_count_sort do  %>
-    Likes
+    <% (t :likes) %>
   <% end %>
   <!-- End sort -->
 </div>
