Add comment count to idea

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -74,3 +74,7 @@ a .flag{
 .social-share-button-twitter:hover{
 	background: url("/assets/sprites/social-share-button-01bd4e9a7782620aab986c55abc6ecb9ee88d50bb51f28c2f00fe36d87a0944c.png") -48px -48px no-repeat;
 }
+
+.open-button, .open-button:hover{
+	color: #000;
+}
