--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -4,7 +4,7 @@
   </div>
 <% else %>
   <%@ideas.each do |idea|%>
-    <div class="container">
+    <div class="container collapse-group">
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="row">
@@ -13,10 +13,11 @@
               <h4 class="panel-title">
                 <a data-toggle="collapse" href="#collapse<%= idea.id * 2 %>"><%= idea.topic %></a>
               </h4>
-              <p><%= link_to User.find(idea.histories.first.user_id).name, User.find(idea.histories.first.user_id) %> - <%= idea.histories.first.time.strftime('%d.%m.%Y %H:%M ') %></p>
+              <p><%= link_to User.find(idea.histories.first.user_id).name, User.find(idea.histories.first.user_id) %> - <%= idea.histories.first.time.strftime('%d.%m.%Y %H:%M ') %><br />
+              <a class='open-button' onclick="open_idea_comments()"><%= (t :comments) %> (<%= idea.comments.count %>)</a></p>
               <%if idea.tags.empty?
                 else%>
-                  <p><%= (t :tags) %> 
+                  <p><%= (t :tags) %>
                   <% idea.tags.each do |tag| %>
                     <%= tag.text %>
                     <% if tag == idea.tags.last%>
@@ -76,7 +77,7 @@
 			      <% end %>
 			      <%= link_to idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
 				      <span class="glyphicon glyphicon-share"></span>
-			      <% end %>	
+			      <% end %>
 		      <% else %>
 			      <%= link_to unlike_idea_path(idea), :class => 'btn btn-success', method: :post do %>
 				      <span class="glyphicon glyphicon-thumbs-up"></span>
