--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -14,7 +14,14 @@
                 <a data-toggle="collapse" href="#collapse<%= idea.id * 2 %>"><%= idea.topic %></a>
               </h4>
               <p><%= link_to User.find(idea.histories.first.user_id).name, User.find(idea.histories.first.user_id) %> - <%= idea.histories.first.time.strftime('%d.%m.%Y %H:%M ') %><br />
-              <a class='open-button' onclick="open_idea_comments()"><%= (t :comments) %> (<%= idea.comments.count %>)</a></p>
+                <a class='open-button' onclick="open_idea_comments()">
+                  <% if not current_user.nil? and current_user.moderator %>
+                    <%= (t :comments) %> (<%= idea.comments.count %>)
+                  <% else %>
+                    <%= (t :comments) %> (<%= idea.comments.where(visible: true).count %>)
+                  <% end %>
+                </a>
+              </p>
               <%if idea.tags.empty?
                 else%>
                   <p><%= (t :tags) %>
