--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -75,6 +75,10 @@ a .flag{
 	background: url("/assets/sprites/social-share-button-01bd4e9a7782620aab986c55abc6ecb9ee88d50bb51f28c2f00fe36d87a0944c.png") -48px -48px no-repeat;
 }
 
+.open-button, .open-button:hover{
+	color: #000;
+}
+
 .list_users{
 	width: 100%;
 }
