--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :topic %><br>
+    <%= f.label (t :topic) %><br>
     <%= f.text_field :topic, :class => "form-control"  %>
   </div>
   <div class="field">
-    <%= f.label :text %><br>
+    <%= f.label (t :text) %><br>
     <%= f.text_area :text, :class => "form-control", :rows => "5" %>
   </div>
 
   <div class="field">
-    <%= f.label :tags %><br>
+    <%= f.label (t :tags) %><br>
       <% if Tag.all.each do |menutag| %>
         <%= check_box_tag 'idea[tags][]', menutag.text%>
         <%= menutag.text %>
@@ -29,6 +29,6 @@
     <% end %>
   </div>
   <div class="actions">
-    <%= f.submit :class => "btn btn-primary" %>
+    <%= f.submit (t :create_idea), :class => "btn btn-primary" %>
   </div>
 <% end %>
