--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,8 @@
     </thead>
 
     <tbody>
-      <% @users.order(:admin => :desc).order(:moderator => :desc).order(:name).each do |user| %>
+      <% @users.order(:admin => :desc, :moderator => :desc, :name => :desc).each do |user| %>
+
         <tr>
           <td <% if user.admin %> class='bg' <% end %>><%= user.admin %></td>
           <td <% if user.moderator %> class='bg' <% end %>><%= user.moderator %></td>
