--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -79,25 +79,34 @@
                 <% end %>
               <% end %>
 	      <% if not (idea.histories.last.basket == "New" or idea.histories.last.basket == "Rejected")%>
-
-		      <% if idea.likes.find_by(user_id: current_user).nil? %>
-			      <%= link_to like_idea_path(idea), :class => 'btn btn-default', method: :post do %>
-				      <span class="glyphicon glyphicon-thumbs-up"></span>
-				      <%= idea.likes.length %>
-			      <% end %>
-			      <%= link_to idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
-				      <span class="glyphicon glyphicon-share"></span>
-			      <% end %>
-		      <% else %>
-			      <%= link_to unlike_idea_path(idea), :class => 'btn btn-success', method: :post do %>
-				      <span class="glyphicon glyphicon-thumbs-up"></span>
-				      <%= idea.likes.length %>
-			      <% end %>
-			      <%= link_to idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
-				      <span class="glyphicon glyphicon-share"></span>
-			      <% end %>
-		      <% end %>
-
+          <% if idea.histories.last.basket == "Approved" %>
+  		      <% if idea.likes.find_by(user_id: current_user).nil? %>
+  			      <%= link_to like_idea_path(idea), :class => 'btn btn-default', method: :post do %>
+  				      <span class="glyphicon glyphicon-thumbs-up"></span>
+  				      <%= idea.likes.length %>
+  			      <% end %>
+  		      <% else %>
+  			      <%= link_to unlike_idea_path(idea), :class => 'btn btn-success', method: :post do %>
+  				      <span class="glyphicon glyphicon-thumbs-up"></span>
+  				      <%= idea.likes.length %>
+  			      <% end %>
+  		      <% end %>
+          <% else %>
+            <% if idea.likes.find_by(user_id: current_user).nil? %>
+              <button class="btn btn-default disabled">
+                <span class="glyphicon glyphicon-thumbs-up"></span>
+                <%= idea.likes.length %>
+              </button>
+            <% else %>
+              <button class="btn btn-success disabled">
+                <span class="glyphicon glyphicon-thumbs-up"></span>
+                <%= idea.likes.length %>
+              </button>
+            <% end %>
+          <% end%>
+            <%= link_to idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
+              <span class="glyphicon glyphicon-share"></span>
+            <% end %>
 	      <% end %>
             </div>
             <!-- End likes and basket controls-->
