Revert "Remove impersonation link from users"
This reverts commit 8b9a97f255d180f71bd1be3ee0d46dffc1a7a720.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,6 +27,10 @@
           <td><%= user.email %></td>
           <td><%= user.title %></td>
 
+  	<td>
+  		<!-- testikäytössä -->
+      <%= link_to 'Impersonate', new_session_path(:persistent_id => user.persistent_id) %>
+  	</td>
 
 
 
