--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -32,12 +32,15 @@
 
     <%= form_tag(ideas_path, method: "get") do %>
       <%= hidden_field_tag(:basket, params[:basket]) %>
-      <%= label_tag(:q, (t :filter_ideas)) %>
     <% Tag.all.each do |menutag| %>
-      <%= label_tag(menutag.text) %>
-      <%= check_box_tag(menutag.text, menutag.text, !(params[menutag.text].nil?)) %>
+      <div class="tag-list">
+        <%= check_box_tag(menutag.text, menutag.text, !(params[menutag.text].nil?)) %><br />
+        <%= label_tag(menutag.text) %>
+      </div>
     <% end %>
-      <%= submit_tag((t :filter)) %>
+      <div class="tag-list">
+        <%= submit_tag((t :filter), class: 'filter-tags') %>
+      </div>
     <% end %>
 
   </div>
