Localize comment button

--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -192,7 +192,7 @@
                           </div>
                           <div class="panel-body">
                             <%= f.text_area :text,class: "form-control", rows: "5", id: "comment"%>
-                            <button type="submit" class="btn btn-primary">Send </button>
+                            <button type="submit" class="btn btn-primary"><%= (t :send) %> </button>
                             <% end %>
                           </div>
                         </div>
