--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -53,6 +53,14 @@
     <% (t :likes) %>
   <% end %>
   <!-- End sort -->
+
+  <%= search_form_for @q, url: search_ideas_path(basket: params[:basket]),
+                          html: { method: :post } do |f| %>
+    <%= f.label :topic_cont %>
+    <%= f.search_field :topic_cont %>
+
+    <%= f.submit %>
+  <% end %>
 </div>
 <!-- End top bar -->
 
